src/components/_homepage/testimonials.module.scss
@import '../../base/module';

.wrapper {
  display: flex;
  flex-direction: column-reverse;
  justify-content: space-between;
  align-items: center;
  gap: 2.5rem;
  @media (min-width: 800px) {
    flex-direction: row-reverse;
  }
}
.background {
  background-color: $color-darkgreen;
}

.image {
  width: 300px;
  @media (min-width: $tablet) {
    width: 400px;
  }
}
.imageWrap {
  aspect-ratio: 1/1;
  position: absolute;
  overflow: hidden;
  display: none;

  .image {
    min-width: 100%;
    min-height: 100%;
  }

  > div {
    height: auto;
  }

  @media (min-width: $tablet) {
    display: flex;
    align-items: center;
    justify-content: center;
    top: 50%;
    transform: translateY(-50%);
    position: absolute;
    width: 300px;
    right: 1%;
  }
  @media (min-width: $desktop) {
    width: 450px;
  }
}

.textWrapper {
  display: flex;
  flex-direction: column;
  gap: 60px;
  .quotesHead {
    font-size: 1.29em;
    font-family: $font-secondary;

    line-height: 1.62rem;
    letter-spacing: 0.15rem;
  }

  .quotesHead p {
    text-transform: uppercase;
    font-weight: 600;
  }

  .quotesHead h2 {
    font-family: $font-header;
    font-size: 3.25em;
    font-style: italic;
    font-weight: 400;
  }

  .quoteWrap {
    max-width: 0;
    width: 0;
    visibility: hidden;
    position: relative;
    display: none;

    font-size: 0.75em;

    p {
      font-size: 1.3em;
      @media (min-width: $tablet) {
        width: 85%;
      }
    }

    @media (min-width: $desktop) {
      p {
        font-size: 1.56em;
      }
    }
  }

  .quoteWrapActive {
    @extend .quoteWrap;
    max-width: 100%;
    width: 100%;
    visibility: visible;
    display: flex;
    flex-direction: column;
    gap: 40px;
    flex: 1;
  }

  .author {
    line-height: 28px;
    font-family: $font-secondary;
    font-weight: 600;
    text-align: center;
    letter-spacing: 0.04em;
    color: $color-black;
    display: block;
    width: max-content;
    background-color: $color-darkgreen;
    border-radius: $bradius;
    text-transform: uppercase;

    @media (min-width: $desktop) {
      font-size: 27px;
    }
  }

  .controlWrap {
    display: flex;
    width: 100%;
    gap: 15px;
  }

  .quoteControls {
    display: flex;
    justify-content: flex-start;
    gap: 20px;
    align-items: center;

    font-size: 1.25em;
    border-radius: $bradius 0 0 $bradius;
    line-height: 1.5em;
    @media (min-width: $desktop) {
      padding: 0px;
    }

    .dotList {
      display: flex;
      gap: 5px;
      align-items: center;

      > div {
        width: 15px;
        height: 15px;
        border: 1px solid $color-black;
        border-radius: 99em;

        &.activeDot {
          background: $color-forestgreen;
        }
      }
    }
  }

  .nextBtn {
    display: flex;
    align-items: center;
    justify-content: flex-start;
    width: 50px;
    border-radius: 0 $bradius $bradius 0;
    color: $color-forestgreen;
    cursor: pointer;

    svg {
      font-size: 26px;
    }
    @media (min-width: $desktop) {
    }
  }

  .counter {
    font-size: 1.2em;
    font-family: $font-secondary;
  }
}

